# glossaria

./: .travis.yml  README.md  alembic.ini  development.ini  pyproject.toml  setup.cfg  tox.ini
alembic/: env.py
alembic/versions/: 96b1d5ea985b_.py
glossaria/: __init__.py  __main__.py  models.py  schema.py  views.py
glossaria/templates/: base.html  index.html
tests/: test_app.py  test_models.py  test_views.py
